[metadata]
name = yapxed
summary = yet another PXE deployer
description-file = README.md
author = juxicn
author-email = juxicn@gmail.com
home-page = http://atgwrtw.xxx
classifier = 
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = yapxed
scripts = 

[entry_points]
# podm.scheduler.filters = 
# 	CpuFilter = podm.scheduler.filters.podm_filter:CpuFilter
# 	MemoryFilter = podm.scheduler.filters.podm_filter:MemoryFilter
# 	StorageFilter = podm.scheduler.filters.podm_filter:StorageFilter
# 	CpuMemoryRelateFilter = podm.scheduler.filters.podm_filter:CpuMemoryRelateFilter
# 	CpuStorageRelateFilter = podm.scheduler.filters.podm_filter:CpuStorageRelateFilter
# console_scripts = 
# 	podm-rootwrap = oslo.rootwrap.cmd:main
# oslo.messaging.notify.drivers = 
# 	podm.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
# 	podm.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
# 	podm.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
# 	podm.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
# 	podm.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 1

[compile_catalog]
directory = yapxed/locale
domain = 

[update_catalog]
domain = yapxed
output_dir = yapxed/locale
input_file = yapxed/locale/yapxed.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = yapxed/locale/yapxed.pot

